# ccloader-installer

./: .gitignore  Cargo.toml  DEV_NOTES.md  LICENSE  README.md  build.rs  ccloader-installer.exe.manifest  ccloader-installer.rc  rustfmt.toml
.github/: release_body_template.md
.github/workflows/: ci.yaml  release.yml
src/: ascii_to_int.rs  error.rs  fancy_logger.rs  macos.rs  main.rs
src/http_client/: mod.rs  parser.rs
src/native_ui/: gtk.rs  macos.rs  mod.rs  windows.rs
