[package]
edition = "2018"
publish = false
name = "ccloader-installer"
version = "0.0.0"
authors = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
description = "CCLoader installer"
license = "MIT"
repository = "https://github.com/dmitmel/ccloader-installer.git"
homepage = "https://github.com/dmitmel/ccloader-installer"

[dependencies]
dirs = "*"
curl = { git = "https://github.com/alexcrichton/curl-rust.git" }
libz-sys = "*"  # dependency needed just for enabling static linking with libz
http = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
flate2 = { version = "*", default-features = false, features = ["zlib"] }
tar = { version = "*", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "*"
cocoa = "*"

[features]
static-curl = ["curl/static-curl"]
static-libz = ["libz-sys/static"]
static = ["static-curl", "static-libz"]
