[package]
edition = "2018"
publish = false
name = "ccloader-installer"
version = "1.0.0"
authors = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
description = "The official automatic installer for CCLoader, the modloader for CrossCode"
license = "MIT"
repository = "https://github.com/dmitmel/ccloader-installer.git"
homepage = "https://github.com/dmitmel/ccloader-installer"
build = "build.rs"

[dependencies]
lazy_static = "*"
log = "*"
log4rs = { version = "*", default-features = false, features = ["ansi_writer", "console_writer", "simple_writer"] }
time = "^0.1"
backtrace = "*"
dirs = "*"
curl = { git = "https://github.com/alexcrichton/curl-rust.git" }
libz-sys = "*"  # dependency needed just for enabling static linking with libz
http = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
flate2 = { version = "*", default-features = false, features = ["zlib"] }
tar = { version = "*", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "*"
cocoa = "*"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "*", features = ["winuser", "shobjidl", "shellapi"] }
wio = "*"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "*"

[features]
static-curl = ["curl/static-curl"]
static-libz = ["libz-sys/static"]
static = ["static-curl", "static-libz"]

[package.metadata.bundle]
identifier = "org.ccdirectlink.ccloader-installer"
